[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Materials/theme.tres" type="Theme" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="SphereShape" id=2]
radius = 2.639

[node name="Player" type="KinematicBody" groups=["player"]]
collision_mask = 5
script = ExtResource( 1 )

[node name="PlayerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08192, -0.597201 )
current = true

[node name="TimerOfInvisibility" type="Timer" parent="."]
one_shot = true

[node name="InteractArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Collider" type="CollisionShape" parent="InteractArea"]
transform = Transform( 0.999827, -0.0186042, -3.82137e-15, 8.1321e-10, 4.37038e-08, -1, 0.0186042, 0.999827, 4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GUI" type="Control" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="InvisibilityBar" type="ProgressBar" parent="ViewportContainer/GUI"]
visible = false
anchor_left = 0.244
anchor_right = 0.732
anchor_bottom = 0.083
margin_left = 0.143982
margin_right = 0.431946
margin_bottom = 0.199997
rect_clip_content = true
mouse_filter = 2
theme = ExtResource( 2 )
max_value = 1.0

[connection signal="timeout" from="TimerOfInvisibility" to="." method="on_invisibility_potion_end"]
[connection signal="area_entered" from="InteractArea" to="." method="on_interact_area_enter"]
